FoodSlice was added, homePage was added and foodCart component was added, vite.config was edited,data.sql was created for h2, foodEntity was edited

--- a/project-api/redux-crud-api/src/main/resources/application.yaml
+++ b/project-api/redux-crud-api/src/main/resources/application.yaml
@@ -6,9 +6,14 @@ spring:
     username: redux
     password: maoco
     driverClassName: org.h2.Driver
+  sql:
+    init:
+      mode: always
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
+
 
