--- a/food-app/package.json
+++ b/food-app/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
